samples/_failures_safe/1761312166_a519df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d2ba635.c: In function ‘main’:
./samples/SAFE/__tmp_5d2ba635.c:152:16: error: expected ‘;’ at end of input
  152 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_5d2ba635.c:152:9: error: expected declaration or statement at end of input
  152 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_5d2ba635.c:152:9: error: expected declaration or statement at end of input
